SFDCProject/src/objects/Employee_Master__c.object
<CustomObject>
    <description>This object contains the list of employees who are active and terminated.</description>
    <fields>
        <fullName>Deactivate__c</fullName>
        <label>Deactivate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAIL_ADDRESS__c</fullName>
        <label>EMAIL ADDRESS</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EMPLOYEE_MOBILE_NUMBER__c</fullName>
        <label>EMPLOYEE MOBILE  NUMBER</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EMPLOYEE_NUMBER__c</fullName>
        <label>EMPLOYEE NUMBER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPLOYEE_PRIMARY_WORK_NUMBER__c</fullName>
        <label>EMPLOYEE PRIMARY WORK NUMBER</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EMPLOYEE_SECONDARY_WORK_NUMBER__c</fullName>
        <label>EMPLOYEE SECONDARY WORK NUMBER</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FIRST_NAME__c</fullName>
        <label>FIRST NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JOB__c</fullName>
        <label>JOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_NAME__c</fullName>
        <label>LAST NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCATION__c</fullName>
        <label>LOCATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORGANIZATION_NAME__c</fullName>
        <label>ORGANIZATION NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPERVISOR_EMAIL_ADDRESS__c</fullName>
        <label>SUPERVISOR EMAIL ADDRESS</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SUPERVISOR_EMPLOYEE_NUMBER__c</fullName>
        <label>SUPERVISOR EMPLOYEE NUMBER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUPERVISOR_FULL_NAME__c</fullName>
        <label>SUPERVISOR FULL NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Status__c</fullName>
        <label>Termination Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Employee Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EMAIL_ADDRESS__c</columns>
        <columns>Termination_Status__c</columns>
        <columns>Deactivate__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Employee Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>